@startuml Database
skinparam classAttributeIconSize 0

class Database {
  - db : sqlite3*
  + Database(path : string)
  + ~Database()
  + prepare(sql : const char*) : Statement
  + execute(sql : const char*) : void
}

class Statement {
  - stmt_ : sqlite3_stmt*
  + Statement(stmt : sqlite3_stmt*) : void
  + ~Statement() : void
  + get() : sqlite3_stmt*
  + stepRaw() : int
}

enum DbError {
  OK
  OpenFailed
  PrepareFailed
  BindFailed
  StepFailed
  Unknown
}


Database --> Statement : creates
Database --> DbError
Statement --> DbError
@enduml
